--- a/notebook4_landowska.ipynb
+++ b/notebook4_landowska.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fWJ8-XD8OzPx",
-        "outputId": "d3589c85-2954-479d-e5b6-55cc6e91beb2",
+        "outputId": "0d586668-0760-4e0f-e98e-3f1abcf3369f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -67,13 +67,14 @@
         "from sklearn import metrics\n",
         "from sklearn import neighbors\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "songs = pandas.read_csv('/content/drive/MyDrive/spotify.csv') # change this to match your dataset directory\n",
         "songs.head()"
       ],
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +148,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea53fde5-8976-4f45-bf10-fd3e785ce511\">\n",
+              "  <div id=\"df-c7346736-4027-47f0-bc9d-875ad052bc86\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -315,7 +316,7 @@
               "</table>\n",
               "<p>5 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea53fde5-8976-4f45-bf10-fd3e785ce511')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c7346736-4027-47f0-bc9d-875ad052bc86')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -366,12 +367,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ea53fde5-8976-4f45-bf10-fd3e785ce511 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c7346736-4027-47f0-bc9d-875ad052bc86 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ea53fde5-8976-4f45-bf10-fd3e785ce511');\n",
+              "          const element = document.querySelector('#df-c7346736-4027-47f0-bc9d-875ad052bc86');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -394,7 +395,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 13
         }
       ]
     },
@@ -402,7 +403,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "exaUcSQxI5FU",
-        "outputId": "52b04a96-7d05-4938-8578-808f4432d7d3",
+        "outputId": "a1357f26-c0ad-49de-d960-db5a00aaff20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -417,7 +418,7 @@
         "train_data, test_data, train_sln, test_sln = train_test_split(songs[predictors], songs[target], test_size = 0.2, random_state=41)\n",
         "train_data.head()"
       ],
-      "execution_count": 25,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +440,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-49ce9d46-5e1b-4e81-9a27-a9684af164c0\">\n",
+              "  <div id=\"df-09061213-1862-4e53-a458-fb05d7dfde24\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +541,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49ce9d46-5e1b-4e81-9a27-a9684af164c0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-09061213-1862-4e53-a458-fb05d7dfde24')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +592,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-49ce9d46-5e1b-4e81-9a27-a9684af164c0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-09061213-1862-4e53-a458-fb05d7dfde24 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-49ce9d46-5e1b-4e81-9a27-a9684af164c0');\n",
+              "          const element = document.querySelector('#df-09061213-1862-4e53-a458-fb05d7dfde24');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -619,7 +620,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 14
         }
       ]
     },
@@ -628,24 +629,34 @@
       "metadata": {
         "id": "MpuWbT-NOUx8",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 375
         },
-        "outputId": "6e564156-ae37-487c-a46a-09b9401e263e"
+        "outputId": "e27dc8a1-07c8-4cc7-80ac-64e350745a69"
       },
       "source": [
         "# w-kNN with small k\n",
         "knn = neighbors.KNeighborsRegressor()\n",
         "knn.fit(train_data, train_sln)\n",
         "predictions = knn.predict(test_data)\n",
+        "acc = accuracy_score(predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, predictions))"
       ],
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.02547694660921196\n"
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-1a6049e1af14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_sln\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_sln\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"R2: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr2_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_sln\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/sklearn/utils/_param_validation.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mInvalidParameterError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m                 \u001b[0;31m# When the function is just a wrapper around an estimator, we allow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;31m# Compute accuracy for each possible representation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"multilabel\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;31m# No metrics support \"multiclass-multioutput\" format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multilabel-indicator\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} is not supported\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: continuous is not supported"
           ]
         }
       ]
@@ -653,83 +664,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o1q07BzTOjnE",
-        "outputId": "a1ad8446-43b5-43e7-933c-d0ecfed2b61e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "o1q07BzTOjnE"
       },
       "source": [
         "# w-kNN with large k\n",
         "knn = neighbors.KNeighborsRegressor(n_neighbors=50)\n",
         "knn.fit(train_data, train_sln)\n",
         "predictions = knn.predict(test_data)\n",
+        "acc = accuracy_score(predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, predictions))\n"
       ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.04904983324768164\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S5kncBKlOrhc",
-        "outputId": "d7b127db-6bc2-4409-a0e6-0f49bf29cac0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "S5kncBKlOrhc"
       },
       "source": [
         "# decision tree with default paramters\n",
         "dt = tree.DecisionTreeRegressor()\n",
         "dt.fit(train_data, train_sln)\n",
         "dt_predictions = dt.predict(test_data)\n",
+        "acc = accuracy_score(dt_predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, dt_predictions))\n"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.3086231160608973\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7QDjUeiyOt53",
-        "outputId": "955f6f06-a5f4-4ecd-b65d-61e95b507bcc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "7QDjUeiyOt53"
       },
       "source": [
         "# decision tree with some kind of parameter that (hopefully) results in a smaller tree\n",
         "dt = tree.DecisionTreeRegressor(max_features=5)\n",
         "dt.fit(train_data, train_sln)\n",
         "dt_predictions = dt.predict(test_data)\n",
+        "acc = accuracy_score(dt_predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, dt_predictions))\n"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.27661075361094123\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -739,25 +720,15 @@
         "rf = ensemble.RandomForestRegressor()\n",
         "rf.fit(train_data, train_sln)\n",
         "rf_predictions = rf.predict(test_data)\n",
+        "acc = accuracy_score(rf_predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, rf_predictions))\n"
       ],
       "metadata": {
-        "id": "94c7_lokK7Dg",
-        "outputId": "f4dca8d3-b7e6-43f5-eb25-75fad2382429",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "94c7_lokK7Dg"
       },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.6475305642565035\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -766,25 +737,15 @@
         "rf = ensemble.RandomForestRegressor(n_estimators=10)\n",
         "rf.fit(train_data, train_sln)\n",
         "rf_predictions = rf.predict(test_data)\n",
+        "acc = accuracy_score(rf_predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, rf_predictions))"
       ],
       "metadata": {
-        "id": "OCPBb2teLAQm",
-        "outputId": "3f333e71-0b27-43a3-f379-0df0df32dbf4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "OCPBb2teLAQm"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.6063117993470901\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -799,11 +760,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y1-4z4VHOxBt",
-        "outputId": "4cd68a87-2ce7-45b6-ae80-6c7863daf619",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Y1-4z4VHOxBt"
       },
       "source": [
         "# normalize the data\n",
@@ -816,18 +773,12 @@
         "knn = neighbors.KNeighborsRegressor()\n",
         "knn.fit(train_data_normalized, train_sln)\n",
         "predictions = knn.predict(test_data_normalized)\n",
+        "acc = accuracy_score(predictions, test_sln)\n",
+        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, predictions))\n"
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "R2:  0.46603123411941894\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
