--- a/notebook4_landowska.ipynb
+++ b/notebook4_landowska.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fWJ8-XD8OzPx",
-        "outputId": "0d586668-0760-4e0f-e98e-3f1abcf3369f",
+        "outputId": "219f09b4-6e7f-4b6f-e142-b6b6610c5f5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -67,14 +67,13 @@
         "from sklearn import metrics\n",
         "from sklearn import neighbors\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "songs = pandas.read_csv('/content/drive/MyDrive/spotify.csv') # change this to match your dataset directory\n",
         "songs.head()"
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c7346736-4027-47f0-bc9d-875ad052bc86\">\n",
+              "  <div id=\"df-72c6990b-669b-454e-b591-a778e26cf742\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -316,7 +315,7 @@
               "</table>\n",
               "<p>5 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c7346736-4027-47f0-bc9d-875ad052bc86')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72c6990b-669b-454e-b591-a778e26cf742')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -367,12 +366,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c7346736-4027-47f0-bc9d-875ad052bc86 button.colab-df-convert');\n",
+              "          document.querySelector('#df-72c6990b-669b-454e-b591-a778e26cf742 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c7346736-4027-47f0-bc9d-875ad052bc86');\n",
+              "          const element = document.querySelector('#df-72c6990b-669b-454e-b591-a778e26cf742');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -395,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 4
         }
       ]
     },
@@ -403,7 +402,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "exaUcSQxI5FU",
-        "outputId": "a1357f26-c0ad-49de-d960-db5a00aaff20",
+        "outputId": "0ff9b0be-d81e-45d6-e3cf-ca94753fad93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -418,7 +417,7 @@
         "train_data, test_data, train_sln, test_sln = train_test_split(songs[predictors], songs[target], test_size = 0.2, random_state=41)\n",
         "train_data.head()"
       ],
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +439,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-09061213-1862-4e53-a458-fb05d7dfde24\">\n",
+              "  <div id=\"df-c0c6bc4f-078d-4b54-bf4b-35af6ce78b44\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -541,7 +540,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-09061213-1862-4e53-a458-fb05d7dfde24')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c0c6bc4f-078d-4b54-bf4b-35af6ce78b44')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -592,12 +591,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-09061213-1862-4e53-a458-fb05d7dfde24 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c0c6bc4f-078d-4b54-bf4b-35af6ce78b44 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-09061213-1862-4e53-a458-fb05d7dfde24');\n",
+              "          const element = document.querySelector('#df-c0c6bc4f-078d-4b54-bf4b-35af6ce78b44');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -620,7 +619,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 5
         }
       ]
     },
@@ -629,34 +628,24 @@
       "metadata": {
         "id": "MpuWbT-NOUx8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 375
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e27dc8a1-07c8-4cc7-80ac-64e350745a69"
+        "outputId": "59fdaa98-baeb-45d2-8526-9e090055f767"
       },
       "source": [
         "# w-kNN with small k\n",
         "knn = neighbors.KNeighborsRegressor()\n",
         "knn.fit(train_data, train_sln)\n",
         "predictions = knn.predict(test_data)\n",
-        "acc = accuracy_score(predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, predictions))"
       ],
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-1a6049e1af14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_sln\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_sln\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"R2: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr2_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_sln\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/sklearn/utils/_param_validation.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mInvalidParameterError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m                 \u001b[0;31m# When the function is just a wrapper around an estimator, we allow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;31m# Compute accuracy for each possible representation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"multilabel\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;31m# No metrics support \"multiclass-multioutput\" format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multilabel-indicator\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} is not supported\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: continuous is not supported"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.02547694660921196\n"
           ]
         }
       ]
@@ -664,53 +653,83 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o1q07BzTOjnE"
+        "id": "o1q07BzTOjnE",
+        "outputId": "11817d2a-c311-4317-ba4f-7c83ea08b3ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# w-kNN with large k\n",
         "knn = neighbors.KNeighborsRegressor(n_neighbors=50)\n",
         "knn.fit(train_data, train_sln)\n",
         "predictions = knn.predict(test_data)\n",
-        "acc = accuracy_score(predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.04904983324768164\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S5kncBKlOrhc"
+        "id": "S5kncBKlOrhc",
+        "outputId": "06f91201-a03a-491a-a989-647f1bba37a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# decision tree with default paramters\n",
         "dt = tree.DecisionTreeRegressor()\n",
         "dt.fit(train_data, train_sln)\n",
         "dt_predictions = dt.predict(test_data)\n",
-        "acc = accuracy_score(dt_predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, dt_predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.3017267596962826\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7QDjUeiyOt53"
+        "id": "7QDjUeiyOt53",
+        "outputId": "6f3b5ac0-b383-4af5-be9b-dfa6b8ddaf26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# decision tree with some kind of parameter that (hopefully) results in a smaller tree\n",
         "dt = tree.DecisionTreeRegressor(max_features=5)\n",
         "dt.fit(train_data, train_sln)\n",
         "dt_predictions = dt.predict(test_data)\n",
-        "acc = accuracy_score(dt_predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, dt_predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.3114313801092441\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -720,15 +739,25 @@
         "rf = ensemble.RandomForestRegressor()\n",
         "rf.fit(train_data, train_sln)\n",
         "rf_predictions = rf.predict(test_data)\n",
-        "acc = accuracy_score(rf_predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, rf_predictions))\n"
       ],
       "metadata": {
-        "id": "94c7_lokK7Dg"
+        "id": "94c7_lokK7Dg",
+        "outputId": "bf52d4f6-6991-4e12-af40-fcdc93b254e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.6477866201488396\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -737,15 +766,25 @@
         "rf = ensemble.RandomForestRegressor(n_estimators=10)\n",
         "rf.fit(train_data, train_sln)\n",
         "rf_predictions = rf.predict(test_data)\n",
-        "acc = accuracy_score(rf_predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, rf_predictions))"
       ],
       "metadata": {
-        "id": "OCPBb2teLAQm"
+        "id": "OCPBb2teLAQm",
+        "outputId": "57ecd439-c379-4e40-fbc2-60ad43d37013",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.6116504149172977\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -760,7 +799,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y1-4z4VHOxBt"
+        "id": "Y1-4z4VHOxBt",
+        "outputId": "d478ddd8-38d1-4821-a285-4896afe43c2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# normalize the data\n",
@@ -773,12 +816,18 @@
         "knn = neighbors.KNeighborsRegressor()\n",
         "knn.fit(train_data_normalized, train_sln)\n",
         "predictions = knn.predict(test_data_normalized)\n",
-        "acc = accuracy_score(predictions, test_sln)\n",
-        "print(acc)\n",
         "print(\"R2: \", metrics.r2_score(test_sln, predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.46603123411941894\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -795,9 +844,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since Random Forest fits a number of classifying decision trees on various sub-samples of the dataset and uses averaging to improve the predictive accuracy and control over-fitting, it preformed the best. \n",
+        "Random Forest algorithm performed the best. It fits a number of classifying decision trees on various sub-samples of the dataset and uses averaging to improve the predictive accuracy and control over-fitting.\n",
         "\n",
-        "Normalizing the data improved the performance and training stability of the model as all the parameters are transformed to be on the same scale. "
+        "Normalizing the data improved the performance and training stability of the model as all the parameters were transformed to be on the same scale. "
       ],
       "metadata": {
         "id": "qS7l6s2K5jXl"
