--- a/notebook5_landowska.ipynb
+++ b/notebook5_landowska.ipynb
@@ -54,7 +54,7 @@
           "height": 331
         },
         "id": "R65ec-xVAAQO",
-        "outputId": "a03ead16-1566-4fdd-bd6a-3e51bb6083c2"
+        "outputId": "96e4daee-ef0a-40ca-c2f3-9b10c972159f"
       },
       "source": [
         "from google.colab import drive\n",
@@ -63,7 +63,7 @@
         "data= pd.read_csv('/content/drive/MyDrive/breast-cancer-wisconsin-data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 97,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7b8a6bc5-a82a-41e7-9e6c-93b4efa46150\">\n",
+              "  <div id=\"df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -283,7 +283,7 @@
               "</table>\n",
               "<p>5 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7b8a6bc5-a82a-41e7-9e6c-93b4efa46150')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -334,12 +334,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7b8a6bc5-a82a-41e7-9e6c-93b4efa46150 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7b8a6bc5-a82a-41e7-9e6c-93b4efa46150');\n",
+              "          const element = document.querySelector('#df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -362,7 +362,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 97
+          "execution_count": 107
         }
       ]
     },
@@ -375,7 +375,7 @@
         "#we need to drop the last column 'Unnamed: 32'\n",
         "data.drop(labels='Unnamed: 32', axis=1, inplace=True)"
       ],
-      "execution_count": 98,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "c5429302-edf3-445e-e05b-d029c3e4e9dd"
+        "outputId": "3bdc951e-19dd-42da-f2a8-e1a1c363247e"
       },
       "source": [
         "\n",
@@ -413,7 +413,7 @@
         "train_sln.hist()\n",
         "#now you can use train_data, test_data, train_sln, and test_sln"
       ],
-      "execution_count": 99,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 99
+          "execution_count": 109
         },
         {
           "output_type": "display_data",
@@ -453,7 +453,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "woj8I3NsAgCT",
-        "outputId": "9e59d2d0-2823-48c9-f153-659a1de1222d",
+        "outputId": "7869427b-3d43-460f-a282-bbb33af82d1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -465,7 +465,7 @@
         "predictions = clf.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 100,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2lCCdv-1At4G",
-        "outputId": "40d024ab-eb21-4234-f41c-2b42bc1dcebc",
+        "outputId": "7a72ef00-8d45-4e27-ec43-fd8e90ea07c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -492,7 +492,7 @@
         "predictions = clf.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 101,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xyyjn8U3BA0n",
-        "outputId": "1c1c98e1-5314-415f-ec93-ab704a743554",
+        "outputId": "08fc193e-efbf-4061-8fe8-bb6e79bed780",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -530,7 +530,7 @@
         "predictions = perc.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))\n"
       ],
-      "execution_count": 102,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +545,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "rwLHd7XKBDbe",
-        "outputId": "2707106c-45c1-43a0-9000-07d51b6a5df0",
+        "outputId": "b4ec0432-9998-47bb-8921-8c063222aa61",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -557,7 +557,7 @@
         "predictions = perc.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 103,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +583,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JcphcrAGBWFQ",
-        "outputId": "c8cf305d-d543-4814-d003-599b8d7d8fec",
+        "outputId": "a7e658f4-e892-4cc8-8a31-93352ae8c012",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -595,13 +595,13 @@
         "predictions = sdg.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 104,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "accuracy: 0.9473684210526315\n"
+            "accuracy: 0.9736842105263158\n"
           ]
         }
       ]
@@ -610,7 +610,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "b0QkV9YaBYBK",
-        "outputId": "22c57df6-a9ad-46e0-d12a-bff151bc3e8d",
+        "outputId": "5c9e970d-7da2-41d2-c0d6-123a048ba9b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -622,13 +622,13 @@
         "predictions = sdg.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 105,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "accuracy: 0.9912280701754386\n"
+            "accuracy: 0.956140350877193\n"
           ]
         }
       ]
@@ -646,7 +646,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gZ30YXm8Bnnq",
-        "outputId": "e9ecc7fb-58e5-4c81-b80e-65632d609148",
+        "outputId": "b27aed89-4992-439c-d999-875505f403a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -668,7 +668,7 @@
         "predictions = clf.predict(test_transformed)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 106,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,9 +689,11 @@
         "## Conclusions:\n",
         "a. Which model performed the best? Why do you think this model performed the best? \\\\\n",
         "\n",
-        "Support Vector Model performed the best because \n",
+        "Support Vector Model performed the best because this model is effective in hihg dimensiona spaces like this one. \n",
         "\n",
-        "b. What effect did the principal component analysis have on the accuracy of your best model? Why do you think this is the case?"
+        "b. What effect did the principal component analysis have on the accuracy of your best model? Why do you think this is the case?\n",
+        "\n",
+        "The principal component analysis simplifies the complexity in high-dimensional data while retaining trends and patterns. It does this by transforming the data into fewer dimensions, which act as summaries of features. That is why it reduced the accuracy of SVC because that model works better in high dimensiona spaces"
       ]
     }
   ]
