--- a/notebook5_landowska.ipynb
+++ b/notebook5_landowska.ipynb
@@ -54,7 +54,7 @@
           "height": 331
         },
         "id": "R65ec-xVAAQO",
-        "outputId": "96e4daee-ef0a-40ca-c2f3-9b10c972159f"
+        "outputId": "421b095a-db17-4ae9-fb4b-deed9bbf1366"
       },
       "source": [
         "from google.colab import drive\n",
@@ -63,13 +63,13 @@
         "data= pd.read_csv('/content/drive/MyDrive/breast-cancer-wisconsin-data.csv')\n",
         "data.head()"
       ],
-      "execution_count": 107,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         },
         {
@@ -115,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96\">\n",
+              "  <div id=\"df-ec8bb398-4608-4657-8339-4062f36ed717\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -283,7 +283,7 @@
               "</table>\n",
               "<p>5 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec8bb398-4608-4657-8339-4062f36ed717')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -334,12 +334,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ec8bb398-4608-4657-8339-4062f36ed717 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d4882bd2-a32a-4a0e-bad2-ca58a9e76f96');\n",
+              "          const element = document.querySelector('#df-ec8bb398-4608-4657-8339-4062f36ed717');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -362,7 +362,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 107
+          "execution_count": 1
         }
       ]
     },
@@ -375,7 +375,7 @@
         "#we need to drop the last column 'Unnamed: 32'\n",
         "data.drop(labels='Unnamed: 32', axis=1, inplace=True)"
       ],
-      "execution_count": 108,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "3bdc951e-19dd-42da-f2a8-e1a1c363247e"
+        "outputId": "0ed26989-8899-4686-cfc4-a44d66735c9f"
       },
       "source": [
         "\n",
@@ -413,7 +413,7 @@
         "train_sln.hist()\n",
         "#now you can use train_data, test_data, train_sln, and test_sln"
       ],
-      "execution_count": 109,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 109
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -453,7 +453,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "woj8I3NsAgCT",
-        "outputId": "7869427b-3d43-460f-a282-bbb33af82d1b",
+        "outputId": "2941025f-bf74-467e-aa7e-1ccbad0360e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -465,7 +465,7 @@
         "predictions = clf.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 110,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2lCCdv-1At4G",
-        "outputId": "7a72ef00-8d45-4e27-ec43-fd8e90ea07c7",
+        "outputId": "e8765bc2-bb23-4aeb-f037-42c22091dd94",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -492,7 +492,7 @@
         "predictions = clf.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 111,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xyyjn8U3BA0n",
-        "outputId": "08fc193e-efbf-4061-8fe8-bb6e79bed780",
+        "outputId": "8023fc34-20af-4af6-e2dc-dcc35d085407",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -530,7 +530,7 @@
         "predictions = perc.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))\n"
       ],
-      "execution_count": 112,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +545,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "rwLHd7XKBDbe",
-        "outputId": "b4ec0432-9998-47bb-8921-8c063222aa61",
+        "outputId": "ec42fbdb-4839-4d8a-d7b3-27c271bbd54c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -557,7 +557,7 @@
         "predictions = perc.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 113,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +583,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JcphcrAGBWFQ",
-        "outputId": "a7e658f4-e892-4cc8-8a31-93352ae8c012",
+        "outputId": "30eaf1c2-2c14-4001-da35-e9afd4ca46e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -595,13 +595,13 @@
         "predictions = sdg.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 114,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "accuracy: 0.9736842105263158\n"
+            "accuracy: 0.9824561403508771\n"
           ]
         }
       ]
@@ -610,7 +610,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "b0QkV9YaBYBK",
-        "outputId": "5c9e970d-7da2-41d2-c0d6-123a048ba9b5",
+        "outputId": "278dfce7-f784-4736-c0c8-c178fc7c99a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -622,13 +622,13 @@
         "predictions = sdg.predict(test_data)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 115,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "accuracy: 0.956140350877193\n"
+            "accuracy: 0.9824561403508771\n"
           ]
         }
       ]
@@ -646,7 +646,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gZ30YXm8Bnnq",
-        "outputId": "b27aed89-4992-439c-d999-875505f403a7",
+        "outputId": "08411ae9-2c49-4f88-fc04-19a89a66ba2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -668,7 +668,7 @@
         "predictions = clf.predict(test_transformed)\n",
         "print(\"accuracy:\", accuracy_score(test_sln, predictions))"
       ],
-      "execution_count": 116,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
